--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Medico</title>
   </head>
   <body>
-    <div data-theme="light" id="root"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
